was-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-deploy
  annotations:
    kubernetes.io/change-cause: was:v7.1
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      nodeSelector:
        type: was
      containers:
      - image: soonge97/was:v7.1
        name: was
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 300m
            memory: 300Mi
          limits:
            cpu: 300m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2
        volumeMounts:
        - name: was-storage
          mountPath: /usr/local/tomcat/webapps/ROOT/
      volumes:
      - name: was-storage
        persistentVolumeClaim:
          claimName: pvc-was
