web-regi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: regi-deploy
  annotations:
    kubernetes.io/change-cause: web-regi:v1.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: web-regi
  template:
    metadata:
      labels:
        app: web-regi
    spec:
      nodeSelector:
        type: web
      containers:
      - image: soonge97/web-regi:v1.0
        name: web
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 2
        volumeMounts:
        - name: web-regi-storage
          mountPath: /mnt/data/web-regi
      volumes:
      - name: web-regi-storage
        persistentVolumeClaim:
          claimName: pvc-web-regi
