db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-headless
spec:
  type: ClusterIP
  clusterIP: 10.100.120.5
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
