was-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-was
spec:
  clusterIP: 10.100.120.4
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was
