web-login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-login
spec:
  type: NodePort
  clusterIP: 10.100.120.2
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30200
  selector:
    app: web-login
