web-regi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-regi
spec:
  type: NodePort
  clusterIP: 10.100.120.3
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30300
  selector:
    app: web-regi
